--- a/package.json
+++ b/package.json
@@ -5,12 +5,13 @@
     "main": "anime-bot.js",
     "type": "module",
     "dependencies": {
-      "@whiskeysockets/baileys": "^6.7.8",
-      "axios": "^1.10.0",
-      "qrcode-terminal": "^0.12.0",
-      "pino": "^9.7.0"
+        "@whiskeysockets/baileys": "^6.7.8",
+        "axios": "^1.10.0",
+        "express": "^5.1.0",
+        "pino": "^9.7.0",
+        "qrcode-terminal": "^0.12.0"
     },
     "scripts": {
-      "start": "node anime-bot.js"
+        "start": "node anime-bot.js"
     }
-  }
+}
